# SmartHome_Tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run_tests.sh
core/: CMakeLists.txt
core/include/: Logger.h  SocketDriver.h  TestCore.h  TestSubjectExecutor.h
core/source/: Logger.cpp  SocketDriver.cpp  TestCore.cpp  TestSubjectExecutor.cpp
core/test/: CMakeLists.txt
core/test/mocks/: logger_mock.hpp
core/test/unit/: SocketDriverTests.cpp
core/tests/: CMakeLists.txt
core/tests/mocks/: SocketDriverMock.h
core/tests/unit/: TestCoreTests.cpp
test_suites/: CMakeLists.txt  FanModuleTests.cpp  SlmModuleTests.cpp  main  main.cpp
test_suites/source/: FanModuleTests.cpp  SlmModuleTests.cpp  main.cpp
